added fast install instructions