@@ -9,6 +9,25 @@
 ## Prerequisites
 
 Install Spigot:  https://www.spigotmc.org/wiki/spigot-installation/
+A
+
+### Fast Install and Test Instructions
+
+curl https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar --output BuildTools.jar
+export MAVEN_OPTS="-Xmx2G"
+java -Xmx2G -jar BuildTools.jar
+echo "eula=true" > eula.txt
+set "gamemode" in "server.properties" to "1" to set world to creative mode
+
+git clone https://github.com/jaguth/spigotpluggin.helloworld.git
+cd spigotpluggin.helloworld/
+./gradlew build
+cd ..
+mkdir plugins
+cp spigotpluggin.helloworld/build/libs/spigotpluggin.helloworld-1.0.jar plugins/spigotpluggin.helloworld-1.0.jar
+
+java -Xms512M -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot-1.13.2.jar
+
 
 ## Versions used for this example project
 
